Fix Logo effect + Mutualisation infos footer & review css + Fix z-index header

--- a/src/components/ContactInfos/style.css
+++ b/src/components/ContactInfos/style.css
@@ -5,6 +5,7 @@
 .contacts_infos {
     display: grid;
     align-items: center;
+    justify-items: start;
     grid-template-columns: 1fr 3fr;
     grid-gap: 1em;
     list-style-type: none;
@@ -21,9 +22,10 @@
 }
 
 .contacts_infos_next {
-    display: grid;
+    display: flex;
+    justify-content: center;
     align-items: center;
-    grid-template-columns: 1fr 1fr;
+    gap: 1rem;
     margin: 1em 0;
 }
 
@@ -34,20 +36,9 @@
     width: 40px;
 }
 
-.footer_fb {
-    text-align: right;
-    padding-right: 0.5em;
-    
-}
-
 .footer_fb svg {
     height: 34px;
     stroke-width:35px;
-}
-
-.footer_insta {
-    text-align: left;
-    padding-left: 0.5em;
 }
 
 .footer_insta svg {
