--- a/src/components/Header/style.css
+++ b/src/components/Header/style.css
@@ -10,7 +10,7 @@ header {
     height: 8rem;
     padding: 0 1em;
     background-color: #fff;
-    z-index: 1;
+    z-index: 10;
     /* box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px,
         rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
     box-shadow: 0 4px 2px -2px gray; */
